creation of constants.php
creation of a constants files, with all environment variables.

--- a/views/comment/dashboardComments.twig
+++ b/views/comment/dashboardComments.twig
@@ -64,7 +64,7 @@
 								</form>
 							</div>
 							<div class="col-md-6 text-center mb-3 mt-4">
-								<form method="post" action="/admin/comments/delete">
+								<form method="post" action="/admin/comments/comments/delete">
 									{{ csrf|raw }}
 									
 									<input type="hidden" name="id" value="{{comment.id}}">
