--- a/views/article/home.twig
+++ b/views/article/home.twig
@@ -123,11 +123,11 @@
                 <h3 class="section-heading">Formulaire de contact</h3>
 {% include 'success.twig' %}
                 <div class="row">
-                  {{form.input ('name', 'votre prénom', {value:session.inputs.surname}) }}
-                  {{form.input ('lastName', 'votre nom', {value:session.inputs.name}) }}
-                  {{form.input ('email', 'votre email', { col:'col-md-12', type:'email', value:session.inputs.email}) }}
+                  {{form.input ('name', 'votre prénom', {value:results.inputs.name}) }}
+                  {{form.input ('lastName', 'votre nom', {value:results.inputs.lastName}) }}
+                  {{form.input ('email', 'votre email', { col:'col-md-12', type:'email', value:results.inputs.email}) }}
                 </div>
-                  {{ form.textarea ('message', 'votre message', {value:session.inputs.message }) }}
+                  {{ form.textarea ('message', 'votre message', {value:results.inputs.message }) }}
                 <div class="visibility form-group" hidden="">
                   <label>Cliquez ici</label>
                   <input type="checkbox" name="envoi" id="envoi" class="form-control" value="vrai">
