--- a/views/article/public/dashboard.twig
+++ b/views/article/public/dashboard.twig
@@ -9,7 +9,7 @@
 		<div class="intro-text h1 pb-5">
 			<h1>Les articles</h1>
 		</div>
-		<div class="contenair">
+		<div class="container">
 
 
 			<div class="col-md-12 d-flex align-content-end ">
