--- a/views/templates/navbarBack.twig
+++ b/views/templates/navbarBack.twig
@@ -6,7 +6,8 @@
       <a type="button" class="btn btn-primary" href="/">Accueil</a>
     </div>
 
-    <button class="btn btn-primary navbar-toggler navbar-toggler-right " type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="btn btn-primary navbar-toggler navbar-toggler-right " type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive"
+            aria-expanded="false" aria-label="Toggle navigation">
     Menu
       <i class="fas fa-bars"></i>
     </button>
